--- a/frontend/src/pages/Signup.css
+++ b/frontend/src/pages/Signup.css
@@ -1,6 +1,6 @@
 .container1{
     background-color: #383632;
-    height: 700px;
+    min-height: 700px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -101,6 +101,7 @@
     font-weight: bold;
     margin-top: 20px;
     transition: 0.3s ease-in-out;
+    text-align: center;
 }
 
 .container2 button:hover{
@@ -115,4 +116,10 @@
 
 .container2 a:hover{
     text-decoration: underline;
+}
+
+.error{
+    font-size: 12px;
+    color: #F01F17;
+    font-weight: 600;
 }
