--- a/frontend/src/pages/UserData.css
+++ b/frontend/src/pages/UserData.css
@@ -174,6 +174,7 @@
 }
 .form{
     min-height: 300px;
+    transition: 0.3s ease-out;
 }
 .form .error{
     color: red;
@@ -208,4 +209,11 @@
     margin-left: 10px;
     font-weight: 700;
     font-size: 18px;
+}
+
+.nojourney{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 40px;
 }
