website basics done

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -9,5 +9,7 @@ nav{
 
 nav p{
     font-weight: bold;
-    font-size: 35px;
+    font-size: 50px;
+    font-family: "Protest Riot", sans-serif;
+
 }
