--- a/frontend/src/pages/UserData.css
+++ b/frontend/src/pages/UserData.css
@@ -299,9 +299,54 @@
     display: flex;
     align-items: center;
     padding-left: 45px;
+    
 }
 .note p{
     margin-left: 10px;
+}
+
+.noteinput{
+    border: none;
+}
+.noteupdate{
+    margin-left: 20px;
+    border-radius: 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    font-size: 10px;
+    height: 20px;
+    width: 50px;
+    transition: 0.2s ease-in;
+}
+
+.noteupdate:hover{
+    transform: scale(1.2);
+    border: 2px solid #00a35c;
+}
+
+.notecancel{
+    color: #00a35c;
+    margin-left: 15px;
+    font-weight: 700;
+    transition: 0.2s ease-in-out;
+
+
+}
+.notecancel:hover{
+    transform: scale(1.2);
+}
+
+.note .pentosquare{
+    margin-left: 30px;
+    color: #00a35c;
+    font-size: 20px;
+    transition:  0.2s ease-in-out;
+    display: inline-block;
+}
+
+ .pentosquare:hover {
+    transform: scale(1.2);
 }
 
 .delete{
