--- a/frontend/src/components/Homebody.css
+++ b/frontend/src/components/Homebody.css
@@ -51,3 +51,34 @@
     outline: 3px solid black;
     outline-offset: 4px;
 }
+
+@media only screen and (max-width: 600px) {
+    .inner1 :nth-child(1){
+        font-weight: 700;
+        font-size: 28px;
+    } 
+    .container .inner1 {
+        position: absolute;
+        top: 90px;
+        left: 20px;
+        padding-left: 20px;
+    }
+    
+.inner1 a{
+    display: block;
+    padding: 10px 15px;
+    font-weight: 600;
+    width: fit-content;
+    margin-top: 20px;
+    font-size: 15px;
+    }
+    .inner1 :nth-child(4){
+        margin-left: 0;
+    }
+    .inner1 :nth-child(2){
+        font-size: 20px;
+        font-weight: bold;
+        margin-top: -10px;
+        margin-bottom: 50px;
+    }
+  }
