--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -74,3 +74,13 @@
     color: #F01F17;
     font-weight: 600;
 }
+
+@media only screen and (max-width: 600px) {
+    .container4{
+        width: 65vw;
+    }
+    .container4 input{
+        font-weight: 800;
+        font-size: 12px;
+    }
+}
