--- a/frontend/src/pages/UserData.css
+++ b/frontend/src/pages/UserData.css
@@ -9,7 +9,7 @@
     color: white;
 }
 
-.top button{
+.top button:nth-of-type(1){
     text-align: center;
     width: 80px;
     height: 30px;
@@ -76,7 +76,7 @@
 }
 .sidebar{
     width: 30%;
-    min-height: 800px;
+    height: 800px;
     background-color:   black;
     /* border: 2px solid red; */
     color: white;
@@ -416,4 +416,107 @@
     font-size: 20px;
     font-weight: 700;
     margin-top: 40px;
+}
+
+.bars{
+    display: none;
+    font-size: 25px;
+    color: #00a35c;
+
+}
+.logoutsidebar{
+    display: none;
+}
+
+@media only screen and (max-width: 600px){
+    .top{
+        padding-left: 7px;
+        padding-right: 10px;
+        height: 50px;
+    }
+    .top .head{
+        display: none;
+    }
+    .user{
+        font-size: 25px;    
+    }
+    .top2 {
+        font-size: 18px;
+        gap: 10px;
+    }
+    .sharefromsquare{
+        display: none;
+    }
+ 
+    .top button{
+       display: none;
+    }
+
+    .bars{
+        display: block;
+    }
+    .sidebar{
+        display: none;
+        width: 3900px;
+        margin-top: 5px;
+        height: 700px;
+        border-top-right-radius:5px ;
+        border-bottom-right-radius:5px ;
+
+    }
+    .sidebar.show{
+        display: block;
+    }
+    .top5{
+        width: 100%;
+    }
+    .top6{
+        height: fit-content;
+        padding-left: 10px;
+        border-left: 20px solid #00a35c;
+
+    }
+    .location{
+        padding-right: 10px;
+    }
+    .location button{
+        height: 20px;
+    }
+    .locationfirstcontainer .locationlogo{
+        font-size: 35px;
+    }
+    .leavingtime , .info , .note , .peoplejoined{
+        padding-left: 25px;
+        font-size: 13px;
+    }
+    .slidebarinner1 .plus{
+        font-size: 30px;
+        margin-bottom: -5px;
+    }
+    .logoutsidebar{
+        display: block;
+        margin-left: 140px;
+        border-radius: 5px;
+        color: black;
+        font-weight: 800;
+        width: 80px;
+        height: 25px;
+        background-color: black;
+        color: white;
+        border: 2px solid #00a35c;
+    }
+    .info a{
+        font-size: 6px;
+        font-weight: bold;
+        padding: 5px;
+        margin-left: 3px;
+    }
+    .form{
+        margin-left: 29px;
+    }
+    .slidebarinner1 a{
+        font-size: 15px;
+        text-decoration: underline;
+    }
+
 }
