--- a/frontend/src/pages/UserData.css
+++ b/frontend/src/pages/UserData.css
@@ -335,7 +335,7 @@
 
 .noteinput{
     border: none;
-    min-width: 60px;
+    width: fit-content;
 }
 .noteupdate{
     margin-left: 20px;
@@ -462,6 +462,7 @@
         height: 700px;
         border-top-right-radius:5px ;
         border-bottom-right-radius:5px ;
+        padding-top: 15px;
 
     }
     .sidebar.show{
@@ -495,7 +496,7 @@
     }
     .logoutsidebar{
         display: block;
-        margin-left: 140px;
+        margin-left: 138px;
         border-radius: 5px;
         color: black;
         font-weight: 800;
@@ -517,6 +518,31 @@
     .slidebarinner1 a{
         font-size: 15px;
         text-decoration: underline;
+    }
+    .location button{
+        width: 50px;
+        height: 20px;
+        font-size: 9px;
+        font-weight: 550;
+    }
+    .location button:hover{
+        transform: scale(1.1);
+        outline: 1px solid  #00a35c;
+    
+    }
+    .form .formcontainer4 button:hover{
+        transform: scale(1.1);
+        border: 1px solid #00a35c;
+
+    }
+    .noteupdate{
+        margin-top: 15px;
+        font-size: 9px;
+    }
+    .notecancel{
+        font-size: 15px;
+        position: relative;
+        top: 3px;
     }
 
 }
